tests/chapter_18/invalid_struct_tags/deref_undeclared.c
int main(void) {
    struct s *ptr = 0;
    *ptr;  // can't dereference pointer to undeclared/incomplete struct
    return 0;
}